[package]
name = "ip-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
lettre = { version = "0.11.1", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"]  }
chrono = "0.4.31"